[OG-3] Добавлено: Методы create, update (Категория)
