# routes/api.php
@@ -11,6 +11,9 @@ Route::prefix(config('app.url_base_path'))->group(function () {
             Route::get('user', 'Api\AuthController@user')->name('auth-user');
         });
     });
+
     Route::prefix('v1')->group(function () {
+        Route::post('categories', 'Api\V1\CategoryController@createCategory')->name('categories.create');
+        Route::put('categories/{category}', 'Api\V1\CategoryController@updateCategory')->name('categories.update');
     });
 });
